--- a/Flow/Flow/Base.lproj/Main.storyboard
+++ b/Flow/Flow/Base.lproj/Main.storyboard
@@ -159,13 +159,94 @@
                     <view key="view" contentMode="scaleToFill" id="Qok-dg-zQf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <userGuides>
+                            <userLayoutGuide location="16" affinity="minX"/>
+                            <userLayoutGuide location="359" affinity="minX"/>
+                        </userGuides>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1VS-tH-MnE">
+                                <rect key="frame" x="166" y="456.66666666666669" width="43" height="20.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="pGw-q9-d4e">
+                                <rect key="frame" x="0.0" y="376" width="375" height="301"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vIx-ZK-Fyu">
+                                        <rect key="frame" x="16" y="8" width="343" height="60"/>
+                                        <color key="backgroundColor" red="1" green="0.70328543539999999" blue="0.69823288849999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="5Zc-wJ-hw5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="17"/>
+                                        <state key="normal" title="Make a Request">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6c-df-rvr">
+                                        <rect key="frame" x="16" y="83" width="343" height="60"/>
+                                        <color key="backgroundColor" red="1" green="0.70328543539999999" blue="0.69823288849999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="17"/>
+                                        <state key="normal" title="See My Requests">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nmG-Yv-KLR">
+                                        <rect key="frame" x="16" y="158" width="343" height="60"/>
+                                        <color key="backgroundColor" red="1" green="0.70328543539999999" blue="0.69823288849999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="17"/>
+                                        <state key="normal" title="Map">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uma-kA-nwG">
+                                        <rect key="frame" x="16" y="233" width="343" height="60"/>
+                                        <color key="backgroundColor" red="1" green="0.70328543539999999" blue="0.69823288849999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="17"/>
+                                        <state key="normal" title="Profile">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to Flow!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqB-sR-gkf">
+                                <rect key="frame" x="54" y="126" width="266" height="29"/>
+                                <fontDescription key="fontDescription" name="Copperplate-Bold" family="Copperplate" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mv-Av-NVs">
+                                <rect key="frame" x="35" y="163" width="304" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="ADc-q2-OuS"/>
+                                </constraints>
+                                <string key="text">Our mission is to provide you with a platform that allows you to communicate with others who are in need or able to offer menstrual hygiene products discreetly. Because not everything goes according to your flow.</string>
+                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="aDY-tx-FNt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1VS-tH-MnE" firstAttribute="centerX" secondItem="pGw-q9-d4e" secondAttribute="centerX" id="8Kc-GR-q9p"/>
+                            <constraint firstItem="pGw-q9-d4e" firstAttribute="top" secondItem="1VS-tH-MnE" secondAttribute="bottom" id="8YM-td-uqb"/>
+                            <constraint firstItem="aDY-tx-FNt" firstAttribute="trailing" secondItem="pGw-q9-d4e" secondAttribute="trailing" id="CWi-Yr-cCD"/>
+                            <constraint firstItem="aDY-tx-FNt" firstAttribute="bottom" secondItem="pGw-q9-d4e" secondAttribute="bottom" id="Twe-mj-Byj"/>
+                            <constraint firstItem="1VS-tH-MnE" firstAttribute="leading" secondItem="aDY-tx-FNt" secondAttribute="leading" constant="166" id="W8k-7i-zzI"/>
+                            <constraint firstItem="1VS-tH-MnE" firstAttribute="centerX" secondItem="uqB-sR-gkf" secondAttribute="centerX" id="dYH-cQ-Bp5"/>
+                            <constraint firstItem="uqB-sR-gkf" firstAttribute="leading" secondItem="aDY-tx-FNt" secondAttribute="leading" constant="54" id="gQS-k1-0cX"/>
+                            <constraint firstItem="6Mv-Av-NVs" firstAttribute="top" secondItem="uqB-sR-gkf" secondAttribute="bottom" constant="78" id="mPg-2Z-Dgs"/>
+                            <constraint firstItem="uqB-sR-gkf" firstAttribute="top" secondItem="aDY-tx-FNt" secondAttribute="top" constant="82" id="qeq-d7-duk"/>
+                            <constraint firstItem="pGw-q9-d4e" firstAttribute="leading" secondItem="aDY-tx-FNt" secondAttribute="leading" id="wKC-Z7-P6w"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9cV-2f-11U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1828" y="-441"/>
+            <point key="canvasLocation" x="1916" y="-440"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="CYN-gJ-HHX">
