fixed mission statement

--- a/Flow/Flow/Base.lproj/Main.storyboard
+++ b/Flow/Flow/Base.lproj/Main.storyboard
@@ -222,7 +222,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mv-Av-NVs">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mv-Av-NVs">
                                 <rect key="frame" x="35" y="163" width="304" height="205"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="ADc-q2-OuS"/>
@@ -251,7 +251,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9cV-2f-11U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1916" y="-440"/>
+            <point key="canvasLocation" x="1916" y="-440.39408866995075"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="CYN-gJ-HHX">
